--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:subtitle="Hamza Khan 1.0"
         app:subtitleTextColor="@color/design_default_color_background"
-        app:title="Search Results"
+        app:title="@string/subtitleHamza"
         app:titleTextColor="@color/design_default_color_background" />
 
     <androidx.drawerlayout.widget.DrawerLayout
@@ -89,7 +89,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:padding="5dp"
-                    android:text="search your recipes"
+                    android:text="@string/textOnSearchBar"
                     android:textSize="12sp"
                     android:textColor="@color/white"
                     android:gravity="center_vertical"
